--- a/index.html
+++ b/index.html
@@ -11,40 +11,28 @@
   <link rel="stylesheet" href="/css/styles.css" >
   <title>Frontend Mentor | Intro component with sign up form</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
   <main>
     <div class="left__column">
-      <h1>Learn to code by watching others</h1>
-      <p>
+      <h1 class="left__column-title">Learn to code by watching others</h1>
+      <p class="left__column-text">
         See how experienced developers solve problems in real-time. Watching
         scripted tutorials is great, but understanding how developers think is
         invaluable.
       </p>
     </div>
-    <div class="rigth__column">
-      <div class="right__column-banner">
-        <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
-      </div>
+    <div class="rigth__column">      
+      <p class="rigth__column-banner"><span>Try it free 7 days</span> then $20/mo. thereafter</p>
+      
       <form class="right__column-form" action="/auth" method="post">
         <input type="text" name="firstName" placeholder="First Name" id="firstName" required>
         <input type="text" name="lastName" placeholder="Last Name" id="lastName" required>
         <input type="email" name="emailAdress" placeholder="Email Adress" id="emailAdress" required>
         <input type="password" name="password" placeholder="Password" id="password" required>
         <input type="submit" value="CLAIM YOUR FREE TRIAL">
-        <p>By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
+        <p class="right__column-text">By clicking the button, you are agreeing to our <span>Terms and Services</span></p>
       </form>
     </div>
   </main>
